# SPA-data-pre-processing

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
calibration/: arduino_gyro_calibration.json  arduino_pressure_calibration.json
configs/: preprocessing_manifest_all_trials.json  restricted_motion_trim_config.json
data/: README.md  preprocessing_manifest_all_trials.csv  preprocessing_manifest_all_trials.json
docs/: README.md  cli_reference.md  data_schema.md  github_issue_backlog.md  manifest_reference.md  pipeline_specs.md
legacy/: arduino_conversion.py  data_sync.py  helper_plot.py  missing_sample_analysis.py  optitrack_conversion.py  sync_freehand_samples.py  sync_functions.py  test_simulate_VIMU.py
legacy/archive/: align_imu_n_opt.py  convert_all_arduino_data.py  convert_all_optitrack.py  (+4 more)
outputs/: README.md
sample_data/: README.md  sample_arduino_fixed_orientation.csv  sample_arduino_freehand_manipulation.csv
scripts/: export_dataset_hdf5.py  fit_gyro_calibration.py  fit_pressure_calibration.py  generate_sample_arduino_features.py  generate_sample_filter_downsample_data.py  generate_sample_optitrack_features.py  generate_sample_scaled_data.py  generate_sample_synced_data.py  inspect_hdf5_gui.py  inspect_raw_gui.py
tests/: test_arduino_raw_decode.py  test_export_dataset_hdf5.py  test_filter_downsample.py  test_global_scaling.py  test_gyro_calibration.py  test_optitrack_compute_angle.py  test_optitrack_raw_ingest.py  test_optitrack_repair.py  test_pressure_calibration.py  test_restricted_motion_trim.py  test_time_sync.py
(+26 files in other folders)
